freemed project changelog
($Id$)

* Thu Apr 19 2001 fforest
  - data/EN/fixedform.EN.data now contains the intake report
  - README add httpd.conf requirement for Alias /tmp /bills
  - manage.php added code to load the new emr_report module
  - module_loader added include for module_emr_report.php
  - lib/error_handler added code to display box top and or 
    box bottom if needed
  - lib/module_* all check_vars functions changed to call trigger_error
    if missing variables or not authorized.
  - fixed_forms added new type EMR Report for fixedform fftype
  - modules/patient_coverage added more relationship types for guarantor
  - modules/mcsi_nsf* process new relationship types.
    added </SELECT> since netscape wanted it.
  - lib/module_emr_report NEW. this is used for loading patient report 
    modules in manage. the reports show up as plain white reports than can 
    be printed. (djordan request).
  - modules/intake.emr.report.module.php NEW this is selected from manage to 
    display a patient intake report. basically, name address of patient,physician
    insurance co. (also per djordan)

* Fri Apr 13 2001 rufustfirefly
  Released 0.2.1.1 (Good Friday the 13th/CVS)
  - lib/freemed.php: updated phpwebtools dependency to 0.2.3

* Wed Apr 11 2001 fforest
  - mcsi_nsf* fix bug in specialty code reporting.

* Wed Apr 11 2001 fforest
  - API change display_itemlist so if the flags parm is 0
    we dont display the Action title and the MOD,DEL,VIEW options.
    so we can use it for nice tableized reports also.
  - lib/module_billing change ShowBillsToMark to optionally display
    the preview box as opposed to displaying it all the time
  - reports.php needed the filename suffix added to 'new module_list() function
  - mcsi_nsf* modules can now generate a link to the file created for 
    submission so the user can left click to download. this makes it easier
    to get the file till mcsi allows us to interface. This also requires a